[HUB-A116] Add css class tolve overlaping issue

--- a/src/assets/templates/css/style.css
+++ b/src/assets/templates/css/style.css
@@ -315,6 +315,10 @@ h2{
 
 }
 
+.p-b-10{
+    padding-bottom: 10px;
+}
+
 .company-legaltxt .brief-content{
     max-width: 720px
 }
